--- a/rportfolio/public/index.html
+++ b/rportfolio/public/index.html
@@ -14,6 +14,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Foldit:wght@100&family=Lato:ital,wght@1,300&family=Lobster&family=Montserrat:wght@400;800&family=Poppins:wght@100;900&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,700;1,700&family=Tilt+Prism&family=Tulpen+One&display=swap" rel="stylesheet">
